Added classes in META-INF/versions/* to classpath